appId: net.cj.cjhv.gs.tving
---
# 로그인 > CJ ONE
# TestRail Case ID: 313769
# https://tving.testrail.io/index.php?/cases/view/313769
# (수동 변환 필요)
#- # startRecording: "result/{{DATE}}/TC313769_로그인___CJ_ONE_{{TIME}}"
- tapOn: "CJ ONE으로 시작하기"
- tapOn:
    id: "net.cj.cjhv.gs.tving:id/edt_id"
- inputText: "principle486"
- tapOn:
    id: "net.cj.cjhv.gs.tving:id/edt_password"
- inputText: "A1qaz2wsx#"
- tapOn: "로그인하기"
- tapOn:
    id: "net.cj.cjhv.gs.tving:id/image_thumbnail"
    index: 0
- tapOn:
    id: "net.cj.cjhv.gs.tving:id/image_close"
- runFlow: "TC313770_로그아웃.yaml"
#- stopRecording