appId: net.cj.cjhv.gs.tving
---
# 상세 플레이어 재생
# TestRail Case ID: 313859
# https://tving.testrail.io/index.php?/cases/view/313859
# (수동 변환 필요)
#- startRecording: "result/20250613/TC313859_상세_플레이어_재생_201526"
# 1. "티빙 로그인" 버튼이 화면에 보일 경우
#- launchApp
- runFlow:
    when:
      visible:
        text: "티빙 로그인" # 또는 id: "tving_login_button_id", accessibilityText: "티빙 로그인" 등 앱의 버튼 식별자에 맞게 수정
    commands:
      - tapOn:
          text: "티빙 로그인" # 위 when 조건과 동일한 선택자 사용
      - runFlow: sub_flows/login_flow.yaml 
      - tapOn:
          text: "영화" # "다른 버튼"을 식별할 수 있는 텍스트, ID 등으로 변경해주세요. 예: id: "other_button_id" 또는 text: "게스트로 시작하기" 등
- runFlow:
    when:
      notVisible: # visible의 반대 조건
        text: "티빙 로그인" # 또는 id: "tving_login_button_id", accessibilityText: "티빙 로그인" 등
    commands:
      - tapOn:
          id: "net.cj.cjhv.gs.tving:id/image_close"
          optional: true    
      - tapOn:
          text: "영화" # "다른 버튼"을 식별할 수 있는 텍스트, ID 등으로 변경해주세요.
                                 # 예: id: "other_button_id" 또는 text: "게스트로 시작하기" 등                       
- tapOn:
    id: "net.cj.cjhv.gs.tving:id/iv_thumbnail"
    index: 0
- tapOn: Error Icon
# - evalScript: |
#     const fs = require('fs');
#     const serial = process.env.DEVICE_SERIAL; 
#     const today = new Date().toISOString().slice(0,10).replace(/-/g, '');
#     const log = fs.readFileSync(`/Users/songjun-yong/Workspace/qa_auto_test_project/result/${serial}/${today}/playing_check.txt`, 'utf-8').trim();
#     output.jsLogValue = log;
#     assertEqual:
#       actual: ${output.jsLogValue}
#       expected: "OK"