appId: net.cj.cjhv.gs.tving
---
# 클립 풀 플레이어 재생
# TestRail Case ID: 313890
# https://tving.testrail.io/index.php?/cases/view/313890
#- launchApp
# 로그인 체크 및 처리
#- launchApp
- runFlow:
    when:
      visible:
        text: "티빙 로그인"
    commands:
      - tapOn:
          text: "티빙 로그인"
      - runFlow: sub_flows/login_flow.yaml
      - tapOn:
          text: "뉴스"

- runFlow:
    when:
      notVisible:
        text: "티빙 로그인"
    commands:
      - tapOn:
          id: "net.cj.cjhv.gs.tving:id/image_close"
          optional: true
      - tapOn:
          text: "뉴스"

# 썸네일 클릭
- tapOn:
    id: "net.cj.cjhv.gs.tving:id/iv_thumbnail"
    index: 0

# 화면 회전 처리
- repeat:
    while:
      notVisible:
        text: "화면 회전"
    times: 5
    commands:
      - tapOn:
          id: net.cj.cjhv.gs.tving:id/surface_view
      - tapOn: "화면 회전"

# JavaScript 실행 및 검증
# - evalScript: |
#     const fs = require('fs');
#     const serial = process.env.DEVICE_SERIAL; 
#     const today = new Date().toISOString().slice(0,10).replace(/-/g, '');
#     const log = fs.readFileSync(`/Users/songjun-yong/Workspace/qa_auto_test_project/result/${serial}/${today}/playing_check.txt`, 'utf-8').trim();
#     output.jsLogValue = log;
#     assertEqual:
#       actual: ${output.jsLogValue}
#       expected: "OK"