appId: net.cj.cjhv.gs.tving
#마이티빙 > 프로필 전환 선택
#프로필 선택 화면 진입
#프로필 선택
#선택한 프로필로 전환 되며, 홈 화면 이동됨
#ㆍ 잠금된 프로필 선택 시, 비밀번호 입력 후 홈 화면 이동됨
---
- launchApp:
    appId: 'net.cj.cjhv.gs.tving'
    clearState: true
    clearKeychain: true # optional: clear *entire* iOS keychain
    stopApp: false # optional (true by default): stop the app before launching it
    permissions:
      { all: allow } # optional: by default all permissions are allowed,
      # even if clearState: true is passed
- tapOn:
    id: 'com.android.permissioncontroller:id/permission_allow_button'
    optional: true
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/btn_accept'
    optional: true
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/btn_close'
    optional: true
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/text_confirm'
- tapOn: '티빙 로그인'
- extendedWaitUntil:
    visible: 'TVING ID로 시작하기'
    timeout: 30000
- tapOn: 'TVING ID로 시작하기'
- tapOn: '아이디'
- inputText:
    text: 't_principle4'
- tapOn:
    text: '비밀번호'
- inputText:
    text: '1q2w3e4r5t'
- tapOn: '로그인하기'
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/image_thumbnail'
    index: 0
- tapOn: #기술지원 팝업 Close Button
    text: '15156557'
    optional: true
- tapOn: #다운로드 메뉴의 위치 변경 안내 팝업 Close Button
    id: 'net.cj.cjhv.gs.tving:id/iv_cancel'
    optional: true

#일반 프로필 전환
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/imageMyProfile'
- tapOn: 프로필 전환
- tapOn:
    id: net.cj.cjhv.gs.tving:id/image_thumbnail
    index: 1

#잠금 프로필 전환
#- tapOn:
#    id: "net.cj.cjhv.gs.tving:id/imageMyProfile"
#- tapOn: 프로필 전환
#- tapOn:
#    id: net.cj.cjhv.gs.tving:id/image_thumbnail
#    index: 3
#- inputText: "2072"
- assertVisible: '드라마'
- assertVisible: '예능'
- assertVisible: '영화'
