appId: net.cj.cjhv.gs.tving
#서브 프로필 편집 화면
#프로필 삭제s 버튼 선택
#서브 프로필 삭제 가능함
---
- launchApp:
    appId: 'net.cj.cjhv.gs.tving'
    clearState: true
    clearKeychain: true # optional: clear *entire* iOS keychain
    stopApp: false # optional (true by default): stop the app before launching it
    permissions:
      { all: allow } # optional: by default all permissions are allowed,
      # even if clearState: true is passed
- tapOn:
    id: 'com.android.permissioncontroller:id/permission_allow_button'
    optional: true
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/btn_accept'
    optional: true
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/btn_close'
    optional: true
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/text_confirm'
- tapOn: '티빙 로그인'
- extendedWaitUntil:
    visible: 'TVING ID로 시작하기'
    timeout: 30000
- tapOn: 'TVING ID로 시작하기'
- tapOn: '아이디'
- inputText:
    text: 't_principle4'
- tapOn:
    text: '비밀번호'
- inputText:
    text: '1q2w3e4r5t'
- tapOn: '로그인하기'
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/image_thumbnail'
    index: 0
- tapOn: #기술지원 팝업 Close Button
    text: '15156557'
    optional: true
- tapOn: #다운로드 메뉴의 위치 변경 안내 팝업 Close Button
    id: 'net.cj.cjhv.gs.tving:id/iv_cancel'
    optional: true

#일반 프로필 전환
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/imageMyProfile'
- tapOn: 프로필 전환
- tapOn:
    id: net.cj.cjhv.gs.tving:id/image_thumbnail
    index: 3

- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/imageMyProfile'
- tapOn: 프로필 전환
- tapOn: '편집'
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/image_edit'
    index: 3
- tapOn: '프로필 삭제'
- tapOn: '확인'

- assertVisible:
    id: 'net.cj.cjhv.gs.tving:id/image_add'

- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/image_thumbnail'
    index: 0

- assertVisible: '드라마'
- assertVisible: '예능'
- assertVisible: '영화'
