appId: net.cj.cjhv.gs.tving
#프로필 편집 화면
#프로필 이미지, 프로필명, 잠금 설정 옵션 변경 후 "확인"
#프로필 편집 가능 확인
---
- launchApp:
    appId: 'net.cj.cjhv.gs.tving'
    clearState: true
    clearKeychain: true # optional: clear *entire* iOS keychain
    stopApp: false # optional (true by default): stop the app before launching it
    permissions:
      { all: allow } # optional: by default all permissions are allowed,
      # even if clearState: true is passed
- tapOn:
    id: 'com.android.permissioncontroller:id/permission_allow_button'
    optional: true
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/btn_accept'
    optional: true
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/btn_close'
    optional: true
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/text_confirm'
- tapOn: '티빙 로그인'
- extendedWaitUntil:
    visible: 'TVING ID로 시작하기'
    timeout: 30000
- tapOn: 'TVING ID로 시작하기'
- tapOn: '아이디'
- inputText:
    text: 't_principle4'
- tapOn:
    text: '비밀번호'
- inputText:
    text: '1q2w3e4r5t'
- tapOn: '로그인하기'
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/image_thumbnail'
    index: 0
- tapOn: #기술지원 팝업 Close Button
    text: '15156557'
    optional: true
- tapOn: #다운로드 메뉴의 위치 변경 안내 팝업 Close Button
    id: 'net.cj.cjhv.gs.tving:id/iv_cancel'
    optional: true

- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/imageMyProfile'
- tapOn: 프로필 전환
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/image_thumbnail'
    index: 3

# 프로필 편집
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/imageMyProfile'
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/my_text_profile_name'
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/image_thumbnail'
# 해상도 다른 단말기는 좌표가 다를 수 있음.
- tapOn:
    point: '46%,20%'
- tapOn: '프로필 이름을 입력해주세요.'
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/image_button_clear'
- inputText: 'QaTest'

#프로필 잠금 설정 확인 추후 개발
- tapOn: '확인'
