appId: net.cj.cjhv.gs.tving
#마이티빙 > 프로필 전환 선택
#프로필 선택 화면 진입
#프로필 선택
#선택한 프로필로 전환 되며, 홈 화면 이동됨
#ㆍ 잠금된 프로필 선택 시, 비밀번호 입력 후 홈 화면 이동됨
---
- launchApp:
    appId: 'net.cj.cjhv.gs.tving'
    clearState: true
    clearKeychain: true # optional: clear *entire* iOS keychain
    stopApp: false # optional (true by default): stop the app before launching it
    permissions:
      { all: allow } # optional: by default all permissions are allowed,
      # even if clearState: true is passed
- tapOn:
    id: 'com.android.permissioncontroller:id/permission_allow_button'
    optional: true
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/btn_accept'
    optional: true
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/btn_close'
    optional: true
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/text_confirm'
- tapOn: '티빙 로그인'
- extendedWaitUntil:
    visible: 'TVING ID로 시작하기'
    timeout: 30000
- tapOn: 'TVING ID로 시작하기'
- tapOn: '아이디'
- inputText:
    text: 't_principle4'
- tapOn:
    text: '비밀번호'
- inputText:
    text: '1q2w3e4r5t'
- tapOn: '로그인하기'
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/image_thumbnail'
    index: 0
- tapOn: #기술지원 팝업 Close Button
    text: '15156557'
    optional: true
- tapOn: #다운로드 메뉴의 위치 변경 안내 팝업 Close Button
    id: 'net.cj.cjhv.gs.tving:id/iv_cancel'
    optional: true

#실시간편성표 진입 (라이브)
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/bottom_menu3'
#첫번째배너
- tapOn: 'StillShot Image'
- tapOn: '편성표'

#편성표 다음날 클릭
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/layout_date'
    index: 3

#알림확인
- assertVisible:
    id: 'net.cj.cjhv.gs.tving:id/image_reservation'
    index: 0
- tapOn: '확인'
- tapOn: '확인'
